samples/_failures_safe/1761472722_f92e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_617bfd8f.c: In function ‘main’:
./samples/SAFE/__tmp_617bfd8f.c:132:9: error: expected declaration or statement at end of input
  132 |         }
      |         ^
./samples/SAFE/__tmp_617bfd8f.c:132:9: error: expected declaration or statement at end of input
